[metadata]
name = Nictk-pkg-python-gui
version = 2.2.0
author = Nicola Cassetta
author_email = ncassetta@tiscali.it
description = A simple to use Python GUI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ncassetta/Nictk
project_urls =
    Bug Tracker = https://github.com/ncassetta/Nictk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GNU :: LGPL-3.0
    Operating System :: OS Independent
license_files =
    COPYING
    COPYING.LESSER
keywords =
    GUI
    tkinter
    graphic :: interface

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]

where = .
